@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -14,12 +14,12 @@ package com.ibm.ws.cache;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.Set;
 import java.util.StringTokenizer;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Supplier;
 
 import com.ibm.websphere.cache.DistributedObjectCache;
 import com.ibm.websphere.ras.Tr;
@@ -28,12 +28,15 @@ import com.ibm.websphere.ras.annotation.Trivial;
 import com.ibm.ws.cache.intf.DCache;
 import com.ibm.ws.cache.intf.DCacheConfig;
 import com.ibm.ws.cache.util.FieldInitializer;
+import com.ibm.ws.ffdc.FFDCFilter;
 import com.ibm.wsspi.kernel.service.location.WsLocationAdmin;
 import com.ibm.wsspi.kernel.service.location.WsLocationConstants;
 
+//@formatter:off
 public class CacheConfig implements DCacheConfig, Cloneable {
-
-    private static TraceComponent tc = Tr.register(CacheConfig.class, "WebSphere Dynamic Cache", "com.ibm.ws.cache.resources.dynacache");
+    private static TraceComponent tc = Tr.register(CacheConfig.class,
+                                                   "WebSphere Dynamic Cache",
+                                                   "com.ibm.ws.cache.resources.dynacache");
 
     // Used in distributedmap.properties
     public static final String CACHE_NAME = "com.ibm.ws.cache.CacheConfig.cacheName";
@@ -88,7 +91,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     public static final String PROPOGATE_INVALIDATIONS_NOT_SHARED = "com.ibm.ws.cache.CacheConfig.propogateInvalidationsNotShared";
     public static final String ALWAYS_SET_SURROGATE_CONTROL_HDR = "com.ibm.ws.cache.CacheConfig.alwaysSetSurrogateControlHdr";
     public static final String DISCARD_JSP_CONTENT = "discardJSPContent";
-    public static final String CACHE_PROVIDER_DYNACACHE = "default";
     public static final String USE_602_REQUIRED_ATTR_COMPATIBILITY = "com.ibm.ws.use602RequiredAttrCompatibility";
     public static final String ALWAYS_TRIGGER_COMMAND_INVALIDATIONS = "com.ibm.ws.CacheConfig.alwaysTriggerCommandInvalidations";
     public static final String CACHE_ENTRY_REF_COUNT_TRACKING = "com.ibm.ws.cache.CacheConfig.refCountTracking";
@@ -116,12 +118,13 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     public static final int EVICTION_NONE = 0;
     public static final int EVICTION_RANDOM = 1;
     public static final int EVICTION_SIZE_BASED = 2;
+
     // -------------------------------------------------
-    // Config settings - Behaviour Change from v5
+    // Config settings - Behavior Change from v5
     // -------------------------------------------------
-    boolean filterTimeOutInvalidation = false; // v5 was false
-    boolean filterLRUInvalidation = false;
-    boolean filterInactivityInvalidation = false;
+    boolean filterTimeOutInvalidation; // v5 was false
+    boolean filterLRUInvalidation;
+    boolean filterInactivityInvalidation;
 
     // Define for default value
     public static final int DEFAULT_DISABLE_CACHE_SIZE_MB = -1;
@@ -176,9 +179,9 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     public static final int MIN_LRU_TO_DISK_TRIGGER_PERCENT = 0; // unit in percent
 
     /**
-     * This determines how many cycles in the clock algorithm must pass before an unused entry is chosen as a victim.
-     * Each entry's clock starts with this and is decremented each clock cycle. A clock value of <= 0 implies a victim
-     * candidate. Its default is 1.
+     * This determines how many cycles in the clock algorithm must pass before an unused
+     * entry is chosen as a victim.  Each entry's clock starts with this and is decremented
+     * each clock cycle.  A clock value of <= 0 implies a victim candidate.
      */
     public static int DEFAULT_PRIORITY = 1;
     public static int MAX_PRIORITY = 16;
@@ -186,22 +189,21 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     // -------------------------------------------------
     // Config settings - General
     // -------------------------------------------------
-    String cacheProviderName = CACHE_PROVIDER_DYNACACHE;
     boolean restoreDynacacheDefaults = true;
-    boolean defaultProvider = true;
-    boolean createCacheAtServerStartup = false;
-    boolean autoFlushIncludes = false;
+    boolean createCacheAtServerStartup;
+    boolean autoFlushIncludes;
 
-    String cacheName = null;
-    String jndiName = null;
-    String tempDir = null;
-    String dtdDir = null;
-    String serverServerName = null;
+    String cacheName;
+    String jndiName;
     int cachePriority = DEFAULT_PRIORITY;
     int jspCachePriority = DEFAULT_PRIORITY;
     int commandCachePriority = DEFAULT_PRIORITY;
     int diskHashBuckets = 1024;
     boolean webservicesSetRequiredTrue = true;
+
+    // TODO: What is this for?  It appears to be unused / obsolete.
+    String dtdDir;
+
     // -------------------------------------------------
     // Config settings - Cache Size
     // -------------------------------------------------
@@ -213,14 +215,15 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     // -------------------------------------------------
     // Config settings - Replication
     // -------------------------------------------------
-    String replicationDomain = null;
-    boolean enableCacheReplication = false;
+    String replicationDomain;
+    boolean enableCacheReplication;
     int replicationType = 0;
     int defaultShareType = EntryInfo.NOT_SHARED;
     int pushFrequency = 1; // seconds
     int batchUpdateInterval = 1000; // msec
     int batchUpdateMilliseconds = -1;
-    boolean drsDisabled = false; // To indicate if replication is temporarily disabled due to congestion
+    // To indicate if replication is temporarily disabled due to congestion
+    boolean drsDisabled;
     boolean drsBootstrapEnabled = true;
     int congestionSleepTimeMilliseconds = 250; // DRS congestion sleep time in ms
     int replicationPayloadSizeInMB = DEFAULT_REPLICATION_PAYLOAD_SIZE_IN_MB; // default payload size = 20 MB
@@ -228,46 +231,40 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     // -------------------------------------------------
     // Config settings - HTOD
     // -------------------------------------------------
-    boolean enableDiskOffload = false;
-    String diskOffloadLocation = null;
-    boolean flushToDiskOnStop = false;
-    int htodCleanupFrequency = DEFAULT_DISKCACHE_CLEANUP_FREQUENCY; // in minutes; 0 means use cleanupHour instead; t >
-    // 0 means run cleanup every t minutes; Max= 24 hr,
-    // Min 1 hr
-    int diskCachePerformanceLevel = HIGH; // default: 1 means balanced setting which indicates some metadata will be
-    // kept in memory.
+    boolean flushToDiskOnStop;
+    int htodCleanupFrequency = DEFAULT_DISKCACHE_CLEANUP_FREQUENCY;
+    // in minutes; 0 means use cleanupHour instead; t >
+    // 0 means run cleanup every t minutes; Max= 24 hr, Min 1 hr
+    int diskCachePerformanceLevel = HIGH;
+    // default: 1 means balanced setting which indicates some metadata will be kept in memory.
     // 0 means low setting which indicates limited metadata will be kept im memory.
     // 2 means custom setting which indicates some metadata will be kept im memory.
     // 3 means high setting which indicates all metadata will be kept in memory.
-    int diskCacheEntrySizeInMB = DEFAULT_DISKCACHE_ENTRY_SIZE_MB; // default: 0 means disable or maximum size of
+    int diskCacheEntrySizeInMB = DEFAULT_DISKCACHE_ENTRY_SIZE_MB;
+    // default: 0 means disable or maximum size of
     // individual cache entry in MB.
     // Any cache entry larger than this when evicted from memory will not be offloaded to disk
-    int diskCacheSizeInGB = DEFAULT_DISKCACHE_SIZE_GB; // default: 0 means disable or maximum disk cache size in GB
-
-    int diskCacheSize = DEFAULT_DISKCACHE_SIZE; // default: 0 means disable or maximum disk cache size
+    int diskCacheSizeInGB = DEFAULT_DISKCACHE_SIZE_GB;
+    // default: 0 means disable or maximum disk cache size in GB
+    int diskCacheSize = DEFAULT_DISKCACHE_SIZE;
+    // default: 0 means disable or maximum disk cache size
 
     int diskCacheEvictionPolicy = EVICTION_RANDOM;
     int diskCacheHighThreshold = DEFAULT_HIGH_THRESHOLD;
     int diskCacheLowThreshold = DEFAULT_LOW_THRESHOLD;
 
-    // -------------------------------------------------
-    // Config settings - External Cache Groups
-    // -------------------------------------------------
-    List<ExternalCacheGroup> externalGroups = new ArrayList<ExternalCacheGroup>();
-
     // -----------------------------------------------------------
     // Config settings
     // -----------------------------------------------------------
-    boolean useListenerContext = false;
-    boolean disableDependencyId = false;
-    boolean enableLockingSupport = false;
-    boolean disableTemplatesSupport = false;
-    boolean enableReplicationAcks = false;
-    boolean enableNioSupport = false;
-    boolean enableServletSupport = true;
-    boolean propogateInvalidationsNotShared = false;
-    boolean alwaysSetSurrogateControlHdr = false;
-    String filteredStatusCodes = null;
+    boolean useListenerContext;
+    boolean disableDependencyId;
+    boolean enableLockingSupport;
+    boolean disableTemplatesSupport;
+    boolean enableReplicationAcks;
+    boolean enableNioSupport;
+    boolean propogateInvalidationsNotShared;
+    boolean alwaysSetSurrogateControlHdr;
+    String filteredStatusCodes;
 
     // -----------------------------------------------------------
     // Non-WCCM config items
@@ -309,7 +306,7 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     int htodPoolEntryLife = DEFAULT_DISKCACHE_POOL_ENTRY_LIFE; // Life is five minutes
     int htodInvalidationBufferSize = 1000; // size of Invalidation buffer to trigger LPBT
     int htodInvalidationBufferLife = 1000 * 10; // Life for Invalidation buffer to trigger LPBT
-    boolean htodDependencyCacheIndexEnabled = false;
+    boolean htodDependencyCacheIndexEnabled;
     int explicitBufferLimitOnStop = DEFAULT_EXPLICIT_BUFFER_LIMIT_ON_STOP;
 
     int cacheEntryWindow = DEFAULT_ENTRY_WINDOW;
@@ -317,247 +314,568 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     int cacheInvalidateEntryWindow = DEFAULT_ENTRY_WINDOW;
     int cacheInvalidatePercentWindow = DEFAULT_PERCENTAGE_WINDOW;
 
-    public boolean disableTemplateInvalidation = false;
-    boolean ignoreValueInInvalidationEvent = false; // default: false
+    public boolean disableTemplateInvalidation;
+    boolean ignoreValueInInvalidationEvent; // default: false
     // false means the value is valid when firing invalidation event
     // true means the value is set to NULL when firing invalidation event
-    boolean useServerClassLoader = false;
-    boolean cascadeCachespecProperties = false;
-    boolean use602RequiredAttrCompatibility = false;
-    boolean alwaysTriggerCommandInvalidations = false;
-    boolean alwaysSynchronizeOnGets = false;
-    boolean ignoreCacheableCommandDeserializationException = false;
+    boolean useServerClassLoader;
+    boolean cascadeCachespecProperties;
+    boolean use602RequiredAttrCompatibility;
+    boolean alwaysTriggerCommandInvalidations;
+    boolean alwaysSynchronizeOnGets;
+    boolean ignoreCacheableCommandDeserializationException;
 
     String disableStoreCookies = "none";
     boolean cacheInstanceStoreCookies = true;
-    // -----------------------------------------------------------
+
+    // TODO: Unused in liberty.
     String topology = ""; // capturing the topology of a provider
-    String libraryRef = null;
 
-    // -----------------------------------------------------------
-    // Users of this config
-    // -----------------------------------------------------------
-    DistributedObjectCache distributedObjectCache = null;
-    DCache cache = null;
-    ConcurrentHashMap _passedInProperties = new ConcurrentHashMap();
-    // -----------------------------------------------------------
+    private boolean refCountTracking;
+    private boolean enableInterCellInvalidation;
 
-    boolean refCountTracking = false;
-    boolean enableInterCellInvalidation = false;
-    int[] statusCodesArray = null;
+    //
 
-    public static class ExternalCacheGroup {
-        public String name;
-        public int type;
-        public List<ExternalCacheGroupMember> members = new ArrayList<ExternalCacheGroupMember>(0);
-    }
-
-    public static class ExternalCacheGroupMember {
-        public String address;
-        public String beanName;
-    }
-
-    public static Properties convert(Map<String, Object> map) {
-        Properties p = new Properties();
-        Set<Map.Entry<String, Object>> set = map.entrySet();
-        for (Map.Entry<String, Object> entry : set) {
-            p.put(entry.getKey(), entry.getValue());
+    /**
+     * Resolve a string value using location settings.
+     *
+     * Answer the default value if location settings are not available.
+     *
+     * See {@link Scheduler#getLocationAdmin()} and {@link WsLocationAdmin#resolveString}.
+     *
+     * @param value The value which is to be resolved.
+     * @param defaultValue A supplier of a default value for when location settings
+     *     are unavailable.
+     *
+     * @return The resolved value, or the supplied default value.
+     */
+    protected static String resolve(String value, Supplier<String> defaultValue) {
+        WsLocationAdmin locationAdmin = Scheduler.getLocationAdmin();
+        if ( locationAdmin == null ) {
+            return defaultValue.get();
+        } else {
+            return locationAdmin.resolveString(value);
         }
-        return p;
     }
 
+    //
+
+    /**
+     * Create a cache configuration from system properties.
+     *
+     * The cache unit {@link ServerCache#cacheUnit} value is
+     * created using this initializer.
+     */
     public CacheConfig() {
-        FieldInitializer.initFromSystemProperties(this);
-        determineCacheProvider();
-    }
+        // TODO: The server name is not set!
+        // setServerName();
 
-    // ------------------------------------------------------
-    // Build cache config with defaults.
-    // Set system proeprties to override defaults.
-    // ------------------------------------------------------
-    public CacheConfig(Map<String, Object> map) {
+        // TODO: The properties are not recorded!
+        // recordProperties( System.getProperties() );
 
-        FieldInitializer.initFromSystemProperties(this);
-        overrideCacheConfig(convert(map));
-        determineCacheProvider();
-        _passedInProperties.putAll(map);
-        Map props = System.getProperties();
-        synchronized (props) {
-            _passedInProperties.putAll(props);
-        }
-
-        WsLocationAdmin locAdmin = Scheduler.getLocationAdmin();
-        // allow to run outside of OSGI for Unit tests
-        if (locAdmin != null) {
-            serverServerName = locAdmin.getServerName();
-        }
-
-        if (filteredStatusCodes != null) {
-            if (tc.isDebugEnabled()) {
-                Tr.debug(tc, "filteredStatusCodes: " + filteredStatusCodes);
-            }
-            StringTokenizer st = new StringTokenizer(filteredStatusCodes);
-            statusCodesArray = new int[st.countTokens()];
-            int i = 0;
-            while (st.hasMoreTokens()) {
-                try {
-                    statusCodesArray[i] = Integer.parseInt(st.nextToken());
-                    if (tc.isDebugEnabled()) {
-                        Tr.debug(tc, "added filteredStatusCodes: " + statusCodesArray[i]);
-                    }
-                } catch (NumberFormatException ex) {
-                    Tr.error(tc, "Error parsing filteredStatusCodes: " + filteredStatusCodes);
-                    statusCodesArray[i] = -1;
-                }
-                i++;
-            }
-        }
-    }
-
-    public CacheConfig(Properties properties, CacheConfig config) {
-
-        serverServerName = Scheduler.getLocationAdmin().getServerName();
-        cachePriority = config.cachePriority;
-        jspCachePriority = config.jspCachePriority;
-        commandCachePriority = config.commandCachePriority;
-        diskHashBuckets = config.diskHashBuckets;
-
-        // -------------------------------------------------
-        // DynamicCache settings - Cache Size
-        // Common for ServletCacheInstance and ObjectCacheInstance
-        // -------------------------------------------------
-        cacheSize = config.cacheSize;
-        cacheProviderName = config.cacheProviderName;
-
-        // -------------------------------------------------
-        // DynamicCache settings - Replication Defaults
-        // -------------------------------------------------
-        cacheProviderName = config.cacheProviderName;
-        enableCacheReplication = config.enableCacheReplication;
-        replicationType = config.replicationType;
-
-        // -------------------------------------------------
-        // DynamicCache settings - Replication
-        // -------------------------------------------------
-        setBatchUpdateInterval(config, config.pushFrequency);
-
-        // -------------------------------------------------
-        // DynamicCache settings - HTOD
-        // -------------------------------------------------
-        enableDiskOffload = false;
-        flushToDiskOnStop = false;
-
-        diskCacheSizeInGB = config.diskCacheSizeInGB;
-        diskCacheSize = config.diskCacheSize;
-        diskCacheEntrySizeInMB = config.diskCacheEntrySizeInMB;
-        diskCachePerformanceLevel = config.diskCachePerformanceLevel;
-        htodCleanupFrequency = config.htodCleanupFrequency;
-        diskCacheEvictionPolicy = config.diskCacheEvictionPolicy;
-        diskCacheHighThreshold = config.diskCacheHighThreshold;
-        diskCacheLowThreshold = config.diskCacheLowThreshold;
-        htodDelayOffloadEntriesLimit = config.htodDelayOffloadEntriesLimit;
-        htodDelayOffloadDepIdBuckets = config.htodDelayOffloadDepIdBuckets;
-        htodDelayOffloadTemplateBuckets = config.htodDelayOffloadTemplateBuckets;
-
-        // -------------------------------------------------
-        // Override config
-        // -------------------------------------------------
-        FieldInitializer.initFromSystemProperties(this);
-        overrideCacheConfig(properties);
-        _passedInProperties.putAll(properties);
-        Map props = System.getProperties();
-        synchronized (props) {
-            _passedInProperties.putAll(props);
-        }
+        systemOverrideCacheConfig();
         determineCacheProvider();
 
-        if (tc.isDebugEnabled()) {
-            Tr.debug(tc, "CacheConfig():1 cacheName=" + cacheName);
+        // TODO: Status codes are not parsed.
+        // setStatusCodes();
+
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "CacheConfig cacheName=" + cacheName);
         }
     }
 
-    protected void reset() {
-        tempDir = null;
-        dtdDir = null;
-        diskOffloadLocation = null;
-        cacheName = null;
-        distributedObjectCache = null;
-        cache = null;
-        serverServerName = null;
-        if (externalGroups != null) {
-            externalGroups.clear();
+    /**
+     * Convert a map into a properties object.
+     *
+     * This is done to enable the field initializer to
+     * consume tables of configuration values which
+     * are stored as java maps {@link java.util.Map}.
+     *
+     * @param pMap The table of properties which is to be converted.
+     *
+     * @return A properties object which contains all of the keys
+     *     and values of the table.
+     */
+    public static Properties convert(Map<String, Object> pMap) {
+        Properties props = new Properties();
+        pMap.forEach( (pKey, pValue) -> {
+            props.put(pKey, pValue);
+        });
+        return props;
+    }
+
+    /**
+     * Create a cache configuration with defaults and with specified overrides.
+     *
+     * Use system properties as a first layer of overrides, then apply the
+     * specified overrides.
+     *
+     * Used when creating configurations from the server configuration.  See
+     * {@link CacheServiceImpl#parsePropertiesFromOSGiConfigAdmin}.
+     *
+     * @param overrides Overrides for the new configuration.
+     */
+    public CacheConfig(Map<String, Object> overrides) {
+        setServerName();
+
+        // TODO: This is backwards: Fields are initialized with the overrides
+        //       having precedence.  Properties are stored with the system properties
+        //       having precedence.
+        recordProperties( overrides );
+        recordProperties( System.getProperties() );
+
+        systemOverrideCacheConfig();
+        overrideCacheConfig( convert(overrides) );
+        determineCacheProvider();
+
+        setStatusCodes();
+
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "CacheConfig cacheName=" + cacheName);
         }
     }
 
-    private void processOffloadDirectory() {
+    /**
+     * Create a cache configuration from a base configuration, from system properties,
+     * and from properties overrides.
+     *
+     * Configuration values are assigned first from the base configuration,
+     * then from system properties, then from the properties override.
+     *
+     * Used by {@link CacheServiceImpl#addCacheInstanceConfig}.  The base
+     * configuration is the default cache configuration,
+     * {@link DCacheBase#DEFAULT_CACHE_NAME}.
+     *
+     * @param overrides Property overrides for the cache configuration.
+     * @param baseConfig The base cache configuration.
+     */
+    public CacheConfig(Properties overrides, CacheConfig baseConfig) {
+        overrideCacheConfig(baseConfig);
 
-        if (tc.isEntryEnabled()) {
-            Tr.entry(tc, "processOffloadDirectory", diskOffloadLocation, enableDiskOffload);
-        }
+        setServerName();
 
-        if (null == tempDir) {
-            WsLocationAdmin locationAdmin = Scheduler.getLocationAdmin();
-            if (null == locationAdmin) {
-                tempDir = System.getProperty("java.io.tmpdir");
-            } else {
-                tempDir = Scheduler.getLocationAdmin().resolveString(WsLocationConstants.SYMBOL_SERVER_WORKAREA_DIR);
-            }
-            if (tc.isDebugEnabled()) {
-                Tr.debug(tc, "cache default dir ", tempDir);
-            }
-        }
+        // TODO: This is backwards: Fields are initialized with the overrides
+        //       having precedence.  Properties are stored with the system properties
+        //       having precedence.
+        recordProperties( overrides );
+        recordProperties( System.getProperties() );
 
-        if (enableDiskOffload) {
-            if (diskOffloadLocation != null && !diskOffloadLocation.isEmpty()) {
-                diskOffloadLocation = Scheduler.getLocationAdmin().resolveString(diskOffloadLocation);
-            } else {
-                diskOffloadLocation = tempDir + "_dynacache";
-            }
-        }
+        // TODO: Reapplying the system properties is problematic if there are
+        //       the same properties set in override properties.
 
-        if (tc.isEntryEnabled()) {
-            Tr.exit(tc, "processOffloadDirectory", diskOffloadLocation);
-        }
+        systemOverrideCacheConfig();
+        overrideCacheConfig(overrides);
+        determineCacheProvider();
 
-    }
+        // TODO: Status codes are not parsed.
+        // setStatusCodes();
 
-    // Override config settings
-    // used by com.ibm.ws.cache.spi.DistributedMapFactory
-    public void overrideCacheConfig(Properties properties) {
-        if (properties != null) {
-            FieldInitializer.initFromSystemProperties(this, properties);
-        }
-        processOffloadDirectory();
-        if (!this.enableServletSupport) {
-            this.disableTemplatesSupport = true;
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "CacheConfig cacheName=" + cacheName);
         }
     }
 
     @Override
     public Object clone() {
-        Object o = null;
+        CacheConfig clone;
         try {
-            o = super.clone();
-        } catch (Exception e) {
-            com.ibm.ws.ffdc.FFDCFilter.processException(e, "com.ibm.ws.cache.CacheConfig", "314");
+            clone = (CacheConfig) super.clone();
+        } catch ( CloneNotSupportedException e ) {
+            FFDCFilter.processException(e, "com.ibm.ws.cache.CacheConfig", "314");
+            return null; // Unexpected.  NPE's will result.
         }
-        // --------------------------------------------------------------------
-        // Since the DistributedObjectCacheFactory is cloning baseBase config,
-        // we have to reset a few config items to prevent problems creating
-        // the new cache. The clone will contain everthing else from the
-        // donor.
-        // --------------------------------------------------------------------
-        ((CacheConfig) o).cacheName = null;
-        ((CacheConfig) o).jndiName = null;
-        ((CacheConfig) o).cache = null;
-        ((CacheConfig) o).distributedObjectCache = null;
-        ((CacheConfig) o).enableServletSupport = false;
-        ((CacheConfig) o).enableDiskOffload = false;
-        ((CacheConfig) o).flushToDiskOnStop = false;
-        ((CacheConfig) o).disableDependencyId = false;
-        ((CacheConfig) o).disableTemplatesSupport = false;
-        return o;
+
+        // Live cache configurations are cloned.  Reset the dynamic
+        // fields to avoid problems.
+
+        // The new configuration must be given new names.  Otherwise, there
+        // is a collision with the source configuration.
+        clone.cacheName = null;
+        clone.jndiName = null;
+
+        // The new configuration is not yet associated with either a cache
+        // or a distributed object cache.
+        clone.cache = null;
+        clone.distributedObjectCache = null;
+
+        // TODO: Why disable these?
+        clone.enableServletSupport = false;
+        clone.disableTemplatesSupport = false;
+        clone.disableDependencyId = false;
+
+        // Disable these: Avoid a collision with the source cache.
+        clone.enableDiskOffload = false;
+        clone.flushToDiskOnStop = false;
+
+        // TODO: Handling of properties, which were just shallowly assigned.
+
+        // TODO: Handling of external groups, which were just shallowly
+        //       assigned.
+
+        return clone;
     }
+
+    /**
+     * Reset dynamic state of the cache configuration.
+     */
+    protected void reset() {
+        resetServerName();
+
+        // The new configuration must be given new names.  Otherwise, there
+        // is a collision with the source configuration.
+        cacheName = null;
+        // TODO: Why not reset this?
+        // jndiName = null;
+
+        // The new configuration is not yet associated with either a cache
+        // or a distributed object cache.
+        cache = null;
+        distributedObjectCache = null;
+
+        // TODO: Why not disable these, as is done by clone?
+        // enableDiskOffload = false;
+        // flushToDiskOnStop = false;
+        // TODO ... and yet this is cleared.
+        diskOffloadLocation = null;
+
+        // TODO: Why disable this?  The workarea should compute
+        //       to the same value.
+        workareaDir = null;
+
+        // TODO: What is this for?  It appears to be unused / obsolete.
+        dtdDir = null;
+
+        clearExternalGroups();
+    }
+
+    // Cache provider information ...
+
+    public static final String CACHE_PROVIDER_DYNACACHE = "default";
+
+    protected String cacheProviderName = CACHE_PROVIDER_DYNACACHE;
+    protected boolean defaultProvider = true;
+
+    // TODO: How is this used?
+    // See: com.ibm.ws.cache.CacheServiceImpl.findOrCreateOSGiConfiguration(CacheConfig),
+    // There the property is transferred into the new cache configuration.
+    // That is a passive transfer.  There is no indication of the library reference
+    // is eventually used.
+    protected String libraryRef;
+
+    @Override
+    public String getCacheProviderName() {
+        return cacheProviderName;
+    }
+
+    @Override
+    @Trivial
+    public boolean isDefaultCacheProvider() {
+        return defaultProvider;
+    }
+
+    /**
+     * Determine whether the default cache provider is in use.
+     *
+     * That is, if the cache provider name is {@link #CACHE_PROVIDER_DYNACACHE}.
+     *
+     * If the cache provider is unset, assign the default.
+     */
+    public void determineCacheProvider() {
+        String providerCase;
+
+        if ( cacheProviderName.equals("") ) {
+            providerCase = "defaulted";
+            defaultProvider = true;
+            cacheProviderName = CacheConfig.CACHE_PROVIDER_DYNACACHE;
+        } else {
+            if ( cacheProviderName.equals(CACHE_PROVIDER_DYNACACHE) ) {
+                providerCase = "default";
+                defaultProvider = true;
+            } else {
+                providerCase = "alternate";
+                defaultProvider = false;
+            }
+        }
+
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "Cache [ " + cacheName + " ] provider [ " + cacheProviderName + " ] (" + providerCase + ")");
+        }
+    }
+
+    //
+
+    /**
+     * Record of properties which were used to populate this cache configuration.
+     *
+     * This is redundant with the actual configuration fields.
+     *
+     * This will contain all system properties and will contain all properties
+     * provided as overrides.
+     *
+     * Since the properties record the fixed values of the configuration,
+     * resetting the cache configuration does not reset these properties.
+     */
+    private final Map<String, String> properties = new HashMap<String, String>();
+
+    @Override
+    public Map<String, String> getProperties() {
+        return properties;
+    }
+
+    protected void recordProperties(Map<String, Object> props) {
+        props.forEach( ( String key, Object value ) -> {
+            properties.put(key, (String) value);
+        } );
+    }
+
+    protected void recordProperties(Properties props) {
+        props.forEach( ( Object key, Object value ) -> {
+            properties.put( (String) key, (String) value );
+        } );
+    }
+
+    //
+
+    /**
+     * Set configuration values with values from a base configuration.
+     *
+     * Only copy configuration values: Do not copy dynamic state.
+     *
+     * Disable disk-offloading.  Otherwise, the new cache configuration
+     * could be used to write to the same cache location as the base
+     * configuration.
+     *
+     * @param baseConfig A cache configuration from which to copy values.
+     */
+    public void overrideCacheConfig(CacheConfig baseConfig) {
+        cachePriority = baseConfig.cachePriority;
+        jspCachePriority = baseConfig.jspCachePriority;
+        commandCachePriority = baseConfig.commandCachePriority;
+        diskHashBuckets = baseConfig.diskHashBuckets;
+
+        // DynamicCache settings - Cache Size
+        // Common for ServletCacheInstance and ObjectCacheInstance
+        cacheSize = baseConfig.cacheSize;
+        cacheProviderName = baseConfig.cacheProviderName;
+
+        // DynamicCache settings - Replication Defaults
+        cacheProviderName = baseConfig.cacheProviderName;
+        enableCacheReplication = baseConfig.enableCacheReplication;
+        replicationType = baseConfig.replicationType;
+
+        // DynamicCache settings - Replication
+        setBatchUpdateInterval(baseConfig, baseConfig.pushFrequency);
+
+        // DynamicCache settings - HTOD
+        // Turn these off: Otherwise, a cache created from the new cache configuration
+        // collides with a cache created from the base configuration.
+        enableDiskOffload = false;
+        flushToDiskOnStop = false;
+
+        diskCacheSizeInGB = baseConfig.diskCacheSizeInGB;
+        diskCacheSize = baseConfig.diskCacheSize;
+        diskCacheEntrySizeInMB = baseConfig.diskCacheEntrySizeInMB;
+        diskCachePerformanceLevel = baseConfig.diskCachePerformanceLevel;
+        htodCleanupFrequency = baseConfig.htodCleanupFrequency;
+        diskCacheEvictionPolicy = baseConfig.diskCacheEvictionPolicy;
+        diskCacheHighThreshold = baseConfig.diskCacheHighThreshold;
+        diskCacheLowThreshold = baseConfig.diskCacheLowThreshold;
+        htodDelayOffloadEntriesLimit = baseConfig.htodDelayOffloadEntriesLimit;
+        htodDelayOffloadDepIdBuckets = baseConfig.htodDelayOffloadDepIdBuckets;
+        htodDelayOffloadTemplateBuckets = baseConfig.htodDelayOffloadTemplateBuckets;
+
+        // TODO: There is a loss of history here.  If the base configuration was updated
+        //       with properties, that information is not transferred.
+    }
+
+    /**
+     * Override the cache configuration properties with system properties.
+     */
+    public void systemOverrideCacheConfig() {
+        FieldInitializer.initFromSystemProperties(this);
+    }
+
+    /**
+     * Override the cache configuration properties with specified properties.
+     *
+     * Use by {@link com.ibm.ws.cache.spi.DistributedMapFactory}.
+     *
+     * @param properties Properties used to override the cache configuration.
+     */
+    public void overrideCacheConfig(Properties properties) {
+        if ( properties != null ) {
+            FieldInitializer.initFromSystemProperties(this, properties);
+        }
+
+        processOffloadDirectory();
+
+        // TODO: Why do this?
+        if ( !enableServletSupport ) {
+            disableTemplatesSupport = true;
+        }
+    }
+
+    //
+
+    private String workareaDir;
+
+    protected String getWorkarea() {
+        if ( workareaDir == null ) {
+            workareaDir = resolve(WsLocationConstants.SYMBOL_SERVER_WORKAREA_DIR,
+                              () -> System.getProperty("java.io.tmpdir"));
+            if ( tc.isDebugEnabled() ) {
+                Tr.debug(tc, "cache workarea [ " + workareaDir + " ]");
+            }
+        }
+        return workareaDir;
+    }
+
+
+    protected boolean enableDiskOffload;
+    protected String diskOffloadLocation;
+
+    @Override
+    public boolean isEnableDiskOffload() {
+        return enableDiskOffload;
+    }
+
+    public void setOffloadOffloadLocationAndProcess(String diskOffloadLocation) {
+        this.diskOffloadLocation = diskOffloadLocation;
+
+        processOffloadDirectory();
+    }
+
+    // Used by test cases
+    public void setDiskOffloadLocation(String diskOffloadLocation) {
+        this.diskOffloadLocation = diskOffloadLocation;
+    }
+
+    // Used by test cases
+    public void setEnableDiskOffload(boolean enableDiskOffload) {
+        this.enableDiskOffload = enableDiskOffload;
+
+        processOffloadDirectory();
+    }
+
+    /**
+     * Process the offload location.
+     *
+     * Do nothing if disk offloading is disabled.
+     *
+     * Otherwise, resolve the disk offload location using location settings.
+     *
+     * If location settings are not available, use a peer to the workarea
+     * directory.
+     */
+    private void processOffloadDirectory() {
+        // TODO: This is not a proper location to use.
+        Supplier<String> offloadLocation = () -> getWorkarea() + "_dynacache";
+
+        if ( enableDiskOffload ) {
+            if ( (diskOffloadLocation != null) && !diskOffloadLocation.isEmpty() ) {
+                diskOffloadLocation = resolve(diskOffloadLocation, offloadLocation);
+            } else {
+                diskOffloadLocation = offloadLocation.get();
+            }
+            if ( tc.isDebugEnabled() ) {
+                Tr.debug(tc, "cache offload [ " + diskOffloadLocation + " ]");
+            }
+        } else {
+            if ( tc.isDebugEnabled() ) {
+                Tr.debug(tc, "cache offload is disabled");
+            }
+        }
+    }
+
+    //
+
+    /**
+     * Answer the name of the node of the server.
+     * Answer null, since Liberty does not use the
+     * concept of nodes.
+     *
+     * @return The name of the node of the server.
+     */
+    @Override
+    public String getServerNodeName() {
+        return null;
+    }
+
+    private String serverName;
+
+    /**
+     * Answer the name of the server.  In Liberty,
+     * this is obtained from the location admin.
+     *
+     * See {@link WsLocationAdmin#getServerName}.
+     *
+     * @return The name of the server.
+     */
+    @Override
+    public String getServerServerName() {
+        return serverName;
+    }
+
+    private void setServerName() {
+        WsLocationAdmin locAdmin = Scheduler.getLocationAdmin();
+        if ( locAdmin != null ) {
+            serverName = locAdmin.getServerName();
+        } else {
+            // allow to run outside of OSGI for Unit tests
+        }
+    }
+
+    private void resetServerName() {
+        serverName = null;
+    }
+
+    //
+
+    private int[] statusCodes;
+
+    private void setStatusCodes() {
+        if ( filteredStatusCodes == null ) {
+            return;
+        }
+
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "filteredStatusCodes " + filteredStatusCodes);
+        }
+
+        StringTokenizer codeTokens = new StringTokenizer(filteredStatusCodes);
+        int[] codes = new int[ codeTokens.countTokens() ];
+
+        for ( int codeNo = 0 ; codeTokens.hasMoreTokens(); codeNo++ ) {
+            String codeToken = codeTokens.nextToken();
+
+            int statusCode;
+            try {
+                statusCode = Integer.parseInt(codeToken);
+            } catch ( NumberFormatException ex ) {
+                Tr.error(tc, "Error parsing status code [ " + codeToken + " ]", ex);
+                statusCode = -1;
+            }
+
+            if ( tc.isDebugEnabled() ) {
+                Tr.debug(tc, "Status code [ " + codeToken + " ] [ " + statusCode + " ]");
+            }
+            codes[codeNo] = statusCode;
+        }
+
+        statusCodes = codes;
+    }
+
+    //
+
+    boolean enableServletSupport = true;
+
+    @Override
+    public boolean isEnableServletSupport() {
+        return enableServletSupport;
+    }
+
+
+    //
 
     @Override
     public int getBatchUpdateInterval() {
@@ -721,16 +1039,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     }
 
     @Override
-    public boolean isEnableDiskOffload() {
-        return this.enableDiskOffload;
-    }
-
-    @Override
-    public boolean isEnableServletSupport() {
-        return this.enableServletSupport;
-    }
-
-    @Override
     public boolean isFilterLRUInvalidation() {
         return this.filterLRUInvalidation;
     }
@@ -768,27 +1076,18 @@ public class CacheConfig implements DCacheConfig, Cloneable {
         this.cachePriority = cachePriority;
     }
 
-    // Used by test cases
-    public void setDiskOffloadLocation(String s) {
-        this.diskOffloadLocation = s;
-    }
-
     @Override
     public void setDrsBootstrapEnabled(boolean drsBootstrapEnabled) {
         this.drsBootstrapEnabled = drsBootstrapEnabled;
-        if (tc.isDebugEnabled())
-            Tr.debug(tc, "setDRSBootstrap() cacheName=" + this.cacheName + " drsBootstrap=" + drsBootstrapEnabled);
+        if ( tc.isDebugEnabled() ) {
+            Tr.debug(tc, "setDRSBootstrap() cacheName=" + cacheName +
+                         " drsBootstrap=" + drsBootstrapEnabled);
+        }
     }
 
     @Override
     public void setDrsDisabled(boolean drsDisabled) {
         this.drsDisabled = drsDisabled;
-    }
-
-    // Used by test cases
-    public void setEnableDiskOffload(boolean b) {
-        this.enableDiskOffload = b;
-        processOffloadDirectory();
     }
 
     // Used by test cases
@@ -798,11 +1097,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
 
     public void setMaxCacheSize(int size) {
         this.cacheSize = size;
-    }
-
-    public void setOffloadOffloadLocationAndProcess(String s) {
-        this.diskOffloadLocation = s;
-        processOffloadDirectory();
     }
 
     @Override
@@ -826,11 +1120,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     }
 
     @Override
-    public String getServerServerName() {
-        return serverServerName;
-    }
-
-    @Override
     public EvictorAlgorithmType getEvictorAlgorithmType() {
         return EvictorAlgorithmType.LRUEvictor;
     }
@@ -843,11 +1132,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     @Override
     public int getReplicationPayloadSizeInMB() {
         return replicationPayloadSizeInMB;
-    }
-
-    @Override
-    public String getCacheProviderName() {
-        return cacheProviderName;
     }
 
     @Override
@@ -882,7 +1166,7 @@ public class CacheConfig implements DCacheConfig, Cloneable {
 
     @Override
     public int[] getFilteredStatusCodes() {
-        return statusCodesArray;
+        return statusCodes;
     }
 
     @Trivial
@@ -898,29 +1182,6 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     @Override
     public boolean isWebservicesSetRequiredTrue() {
         return webservicesSetRequiredTrue;
-    }
-
-    /**
-     * Determines if default cache provider is being used and sets flag accordingly.
-     *
-     */
-    public void determineCacheProvider() {
-        this.defaultProvider = true;
-        if (cacheProviderName.equals("")) {
-            cacheProviderName = CacheConfig.CACHE_PROVIDER_DYNACACHE;
-        }
-        if (!cacheProviderName.equals(CACHE_PROVIDER_DYNACACHE)) {
-            defaultProvider = false;
-            if (tc.isDebugEnabled()) {
-                Tr.debug(tc, "Alternate CacheProvider " + cacheProviderName + " set for " + cacheName);
-            }
-        }
-    }
-
-    @Override
-    @Trivial
-    public boolean isDefaultCacheProvider() {
-        return defaultProvider;
     }
 
     // only called when the alternate cache provider could not create the cache.. we need to then revert to the default
@@ -976,111 +1237,170 @@ public class CacheConfig implements DCacheConfig, Cloneable {
     }
 
     public void setDiskCacheEvictionPolicy(int evictionPolicy) {
-        if (tc.isDebugEnabled()) {
-            Tr.entry(tc, "setDiskCacheEvictionPolicy", new Integer(evictionPolicy));
+        String methodName = "setDiskCacheEvictionPolicy";
+        if ( tc.isDebugEnabled() ) {
+            Tr.entry(tc, methodName, Integer.valueOf(evictionPolicy));
         }
 
-        if (evictionPolicy >= CacheConfig.EVICTION_NONE && evictionPolicy <= CacheConfig.EVICTION_SIZE_BASED)
+        if ( (evictionPolicy >= CacheConfig.EVICTION_NONE) && (evictionPolicy <= CacheConfig.EVICTION_SIZE_BASED) ) {
             diskCacheEvictionPolicy = evictionPolicy;
+        } else {
+            if (tc.isDebugEnabled()) {
+                Tr.debug(tc, methodName + " ignoring [ " + evictionPolicy + " ]: Out of range");
+            }
+        }
 
-        if (tc.isDebugEnabled()) {
-            Tr.entry(tc, "setDiskCacheEvictionPolicy", new Integer(diskCacheEvictionPolicy));
+        if ( tc.isDebugEnabled() ) {
+            Tr.entry(tc, methodName, Integer.valueOf(diskCacheEvictionPolicy));
         }
     }
 
-    @Override
-    public String getServerNodeName() {
-        return null;
-    }
-
-    @Override
-    public Map<String, String> getProperties() {
-        return _passedInProperties;
-    }
-
-    @Override
-    public String toString() {
-        return "CacheConfig [ " + "  cacheName=" + cacheName + ", jndiName=" + jndiName + ", cacheSize=" + cacheSize + ", cache=" + cache
-               + ", libraryRef=" + libraryRef + ", createCacheAtServerStartup=" + createCacheAtServerStartup + ", distributedObjectCache="
-               + distributedObjectCache + ", defaultProvider=" + defaultProvider + ", enableCacheReplication=" + enableCacheReplication
-               + ", enableDiskOffload=" + enableDiskOffload + ", enableNioSupport=" + enableNioSupport + ", alwaysSetSurrogateControlHdr="
-               + alwaysSetSurrogateControlHdr + ", externalGroups=" + externalGroups + ", alwaysSynchronizeOnGets=" + alwaysSynchronizeOnGets
-               + ", alwaysTriggerCommandInvalidations=" + alwaysTriggerCommandInvalidations + ", cacheInstanceStoreCookies="
-               + cacheInstanceStoreCookies + ", cachePercentageWindow=" + cachePercentageWindow + ", cachePriority=" + cachePriority
-               + ", cacheProviderName=" + cacheProviderName + ", cascadeCachespecProperties=" + cascadeCachespecProperties
-               + ", commandCachePriority=" + commandCachePriority + ", configReloadInterval=" + configReloadInterval + ", disableDependencyId="
-               + disableDependencyId + ", disableStoreCookies=" + disableStoreCookies + ", disableTemplateInvalidation="
-               + disableTemplateInvalidation + ", disableTemplatesSupport=" + disableTemplatesSupport + ", diskCacheEntrySizeInMB="
-               + diskCacheEntrySizeInMB + ", diskCacheEvictionPolicy=" + diskCacheEvictionPolicy + ", diskCacheHighThreshold="
-               + diskCacheHighThreshold + ", diskCacheLowThreshold=" + diskCacheLowThreshold + ", diskCachePerformanceLevel="
-               + diskCachePerformanceLevel + ", diskCacheSize=" + diskCacheSize + ", diskCacheSizeInGB=" + diskCacheSizeInGB + ", diskHashBuckets="
-               + diskHashBuckets + ", diskOffloadLocation=" + diskOffloadLocation + ", htodCleanupFrequency=" + htodCleanupFrequency
-               + ", htodCleanupHour=" + htodCleanupHour + ", htodDataHashtableSize=" + htodDataHashtableSize + ", htodDelayOffload="
-               + htodDelayOffload + ", htodDelayOffloadDepIdBuckets=" + htodDelayOffloadDepIdBuckets + ", htodDelayOffloadEntriesLimit="
-               + htodDelayOffloadEntriesLimit + ", htodDelayOffloadTemplateBuckets=" + htodDelayOffloadTemplateBuckets + ", htodDepIdHashtableSize="
-               + htodDepIdHashtableSize + ", htodDependencyCacheIndexEnabled=" + htodDependencyCacheIndexEnabled + ", htodInvalInterval="
-               + htodInvalInterval + ", htodInvalidationBufferLife=" + htodInvalidationBufferLife + ", htodInvalidationBufferSize="
-               + htodInvalidationBufferSize + ", htodNumberOfPools=" + htodNumberOfPools + ", htodPoolEntryLife=" + htodPoolEntryLife
-               + ", htodPoolSize=" + htodPoolSize + ", htodTemplateHashtableSize=" + htodTemplateHashtableSize + ", lruToDiskTriggerPercent="
-               + lruToDiskTriggerPercent + ", lruToDiskTriggerTime=" + lruToDiskTriggerTime + ", explicitBufferLimitOnStop="
-               + explicitBufferLimitOnStop + ", drsBootstrapEnabled=" + drsBootstrapEnabled + ", drsDisabled=" + drsDisabled + ", dtdDir=" + dtdDir
-               + ", filterInactivityInvalidation=" + filterInactivityInvalidation + ", filterLRUInvalidation=" + filterLRUInvalidation
-               + ", filterTimeOutInvalidation=" + filterTimeOutInvalidation + ", filteredStatusCodes=" + filteredStatusCodes
-               + ", flushToDiskOnStop=" + flushToDiskOnStop + ", ignoreCacheableCommandDeserializationException="
-               + ignoreCacheableCommandDeserializationException + ", ignoreValueInInvalidationEvent=" + ignoreValueInInvalidationEvent
-               + ", jspCachePriority=" + jspCachePriority + ", memoryCacheHighThreshold=" + memoryCacheHighThreshold + ", memoryCacheLowThreshold="
-               + memoryCacheLowThreshold + ", memoryCacheSizeInMB=" + memoryCacheSizeInMB + ", refCountTracking=" + refCountTracking
-               + ", serverServerName=" + serverServerName + ", statusCodesArray=" + Arrays.toString(statusCodesArray) + ", tempDir=" + tempDir
-               + ", batchUpdateInterval=" + batchUpdateInterval + ", batchUpdateMilliseconds=" + batchUpdateMilliseconds
-               + ", timeGranularityInSeconds=" + timeGranularityInSeconds + ", maxTimeLimitInSeconds=" + maxTimeLimitInSeconds
-               + ", timeHoldingInvalidations=" + timeHoldingInvalidations + ", getClass()=" + getClass() + ", hashCode()=" + hashCode()
-               + ", toString()=" + super.toString() + "]";
-    }
-
-    /**
-     * @return the createCacheAtServerStartup
-     */
     public boolean isCreateCacheAtServerStartup() {
         return createCacheAtServerStartup;
     }
 
-    /**
-     * @return the distributedObjectCache
-     */
+    public int getJspCachePriority() {
+        return jspCachePriority;
+    }
+
+
+    //
+
+    //
+
+    DCache cache;
+    DistributedObjectCache distributedObjectCache;
+
+    public DCache getCache() {
+        return cache;
+    }
+
+    public void setCache(DCache cache) {
+        this.cache = cache;
+    }
+
     public DistributedObjectCache getDistributedObjectCache() {
         return distributedObjectCache;
     }
 
     public void setDistributedObjectCache(DistributedObjectCache cache) {
-        distributedObjectCache = cache;
+        this.distributedObjectCache = cache;
     }
 
-    /**
-     * @return the cache
-     */
-    public DCache getCache() {
-        return cache;
+    // -------------------------------------------------
+    // Config settings - External Cache Groups
+    // -------------------------------------------------
+
+    public static class ExternalCacheGroup {
+        public String name;
+        public int type;
+        public List<ExternalCacheGroupMember> members = new ArrayList<ExternalCacheGroupMember>(0);
     }
 
-    /**
-     * @param cache the cache to set
-     */
-    public void setCache(DCache cache) {
-        this.cache = cache;
+    public static class ExternalCacheGroupMember {
+        public String address;
+        public String beanName;
     }
 
-    /**
-     * @return the externalGroups
-     */
+    private final List<ExternalCacheGroup> externalGroups = new ArrayList<ExternalCacheGroup>();
+
+    public void addExternalGroup(ExternalCacheGroup group) {
+        externalGroups.add(group);
+    }
+
+    protected void clearExternalGroups() {
+        externalGroups.clear();
+    }
+
     public List<ExternalCacheGroup> getExternalGroups() {
         return externalGroups;
     }
 
-    /**
-     * @return the jspCachePriority
-     */
-    public int getJspCachePriority() {
-        return jspCachePriority;
-    }
+    //
 
+    @Override
+    public String toString() {
+        return "CacheConfig [ " +
+                        "cacheName=" + cacheName +
+                        ", jndiName=" + jndiName +
+                        ", cacheSize=" + cacheSize +
+                        ", cache=" + cache +
+                        ", libraryRef=" + libraryRef +
+                        ", createCacheAtServerStartup=" + createCacheAtServerStartup +
+                        ", distributedObjectCache=" + distributedObjectCache +
+                        ", defaultProvider=" + defaultProvider +
+                        ", enableCacheReplication=" + enableCacheReplication +
+                        ", enableDiskOffload=" + enableDiskOffload +
+                        ", enableNioSupport=" + enableNioSupport +
+                        ", alwaysSetSurrogateControlHdr=" + alwaysSetSurrogateControlHdr +
+                        ", externalGroups=" + externalGroups +
+                        ", alwaysSynchronizeOnGets=" + alwaysSynchronizeOnGets +
+                        ", alwaysTriggerCommandInvalidations=" + alwaysTriggerCommandInvalidations +
+                        ", cacheInstanceStoreCookies=" + cacheInstanceStoreCookies +
+                        ", cachePercentageWindow=" + cachePercentageWindow +
+                        ", cachePriority=" + cachePriority +
+                        ", cacheProviderName=" + cacheProviderName +
+                        ", cascadeCachespecProperties=" + cascadeCachespecProperties +
+                        ", commandCachePriority=" + commandCachePriority +
+                        ", configReloadInterval=" + configReloadInterval +
+                        ", disableDependencyId=" + disableDependencyId +
+                        ", disableStoreCookies=" + disableStoreCookies +
+                        ", disableTemplateInvalidation=" + disableTemplateInvalidation +
+                        ", disableTemplatesSupport=" + disableTemplatesSupport +
+                        ", diskCacheEntrySizeInMB=" + diskCacheEntrySizeInMB +
+                        ", diskCacheEvictionPolicy=" + diskCacheEvictionPolicy +
+                        ", diskCacheHighThreshold=" + diskCacheHighThreshold +
+                        ", diskCacheLowThreshold=" + diskCacheLowThreshold +
+                        ", diskCachePerformanceLevel=" + diskCachePerformanceLevel +
+                        ", diskCacheSize=" + diskCacheSize +
+                        ", diskCacheSizeInGB=" + diskCacheSizeInGB +
+                        ", diskHashBuckets=" + diskHashBuckets +
+                        ", diskOffloadLocation=" + diskOffloadLocation +
+                        ", htodCleanupFrequency=" + htodCleanupFrequency +
+                        ", htodCleanupHour=" + htodCleanupHour +
+                        ", htodDataHashtableSize=" + htodDataHashtableSize +
+                        ", htodDelayOffload=" + htodDelayOffload +
+                        ", htodDelayOffloadDepIdBuckets=" + htodDelayOffloadDepIdBuckets +
+                        ", htodDelayOffloadEntriesLimit=" + htodDelayOffloadEntriesLimit +
+                        ", htodDelayOffloadTemplateBuckets=" + htodDelayOffloadTemplateBuckets +
+                        ", htodDepIdHashtableSize=" + htodDepIdHashtableSize +
+                        ", htodDependencyCacheIndexEnabled=" + htodDependencyCacheIndexEnabled +
+                        ", htodInvalInterval=" + htodInvalInterval +
+                        ", htodInvalidationBufferLife=" + htodInvalidationBufferLife +
+                        ", htodInvalidationBufferSize=" + htodInvalidationBufferSize +
+                        ", htodNumberOfPools=" + htodNumberOfPools +
+                        ", htodPoolEntryLife=" + htodPoolEntryLife +
+                        ", htodPoolSize=" + htodPoolSize +
+                        ", htodTemplateHashtableSize=" + htodTemplateHashtableSize +
+                        ", lruToDiskTriggerPercent=" + lruToDiskTriggerPercent +
+                        ", lruToDiskTriggerTime=" + lruToDiskTriggerTime +
+                        ", explicitBufferLimitOnStop=" + explicitBufferLimitOnStop +
+                        ", drsBootstrapEnabled=" + drsBootstrapEnabled +
+                        ", drsDisabled=" + drsDisabled +
+                        ", dtdDir=" + dtdDir +
+                        ", filterInactivityInvalidation=" + filterInactivityInvalidation +
+                        ", filterLRUInvalidation=" + filterLRUInvalidation +
+                        ", filterTimeOutInvalidation=" + filterTimeOutInvalidation +
+                        ", filteredStatusCodes=" + filteredStatusCodes +
+                        ", flushToDiskOnStop=" + flushToDiskOnStop +
+                        ", ignoreCacheableCommandDeserializationException=" + ignoreCacheableCommandDeserializationException +
+                        ", ignoreValueInInvalidationEvent=" + ignoreValueInInvalidationEvent +
+                        ", jspCachePriority=" + jspCachePriority +
+                        ", memoryCacheHighThreshold=" + memoryCacheHighThreshold +
+                        ", memoryCacheLowThreshold=" + memoryCacheLowThreshold +
+                        ", memoryCacheSizeInMB=" + memoryCacheSizeInMB +
+                        ", refCountTracking=" + refCountTracking +
+                        ", serverServerName=" + serverName +
+                        ", statusCodesArray=" + Arrays.toString(statusCodes) +
+                        ", tempDir=" + workareaDir +
+                        ", batchUpdateInterval=" + batchUpdateInterval +
+                        ", batchUpdateMilliseconds=" + batchUpdateMilliseconds +
+                        ", timeGranularityInSeconds=" + timeGranularityInSeconds +
+                        ", maxTimeLimitInSeconds=" + maxTimeLimitInSeconds +
+                        ", timeHoldingInvalidations=" + timeHoldingInvalidations +
+
+                        ", getClass()=" + getClass() + ", hashCode()=" + hashCode() +
+                        ", toString()=" + super.toString() + "]";
+    }
 }
+//@formatter:on
